Fix scroll bug while retaining fade transition
React Scrollbars wasn't resizing properly when collapsing a node-list group, as the children were still present with height, they were just hidden. In order to keep animating their transition, I've set it to completely remove them from the DOM when collapsed, and have instead applied CSS enter/exit animations.

--- a/src/components/node-list/node-list.scss
+++ b/src/components/node-list/node-list.scss
@@ -101,16 +101,34 @@
   margin: 0 12px;
   padding: 0;
   list-style: none;
-  transition: visibility ease 0.3s, opacity ease 0.3s;
+
+  .kui-theme--light & {
+    background: $color-bg-light-alt2;
+  }
+
+  .kui-theme--dark & {
+    background: $color-bg-dark-alt2;
+  }
 
   &--nested {
     margin: 0 0 12px;
   }
 
-  &--collapsed {
-    visibility: hidden;
-    height: 0;
+  &--fade-in {
+    animation: fadeIn 0.4s forwards;
+  }
+
+  &--fade-out {
+    animation: fadeIn 0.4s backwards reverse;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
     opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
